adj. field sizes, changes to batch processing, EntityGraph impl